tests/ui/resolve/detect-missing-else-in-let.stderr
error: expected identifier, found keyword `return`
  --> $DIR/detect-missing-else-in-let.rs:4:23
   |
LL |     let Some(a) = foo{return;};
   |                   --- ^^^^^^ expected identifier, found keyword
   |                   |
   |                   while parsing this struct
   |
help: escape `return` to use it as an identifier
   |
LL |     let Some(a) = foo{r#return;};
   |                       ++

error: expected one of `,`, `:`, or `}`, found `!`
  --> $DIR/detect-missing-else-in-let.rs:8:27
   |
LL |     let Some(b) = foo{todo!()};
   |                   --- ----^ expected one of `,`, `:`, or `}`
   |                   |   |
   |                   |   while parsing this struct field
   |                   while parsing this struct

error[E0574]: expected struct, variant or union type, found local variable `foo`
  --> $DIR/detect-missing-else-in-let.rs:4:19
   |
LL |     let Some(a) = foo{return;};
   |                   ^^^ not a struct, variant or union type
   |
help: try adding `else` here:
   |
LL |     let Some(a) = foo else {return;};
   |                       ++++

error[E0574]: expected struct, variant or union type, found local variable `foo`
  --> $DIR/detect-missing-else-in-let.rs:8:19
   |
LL |     let Some(b) = foo{todo!()};
   |                   ^^^ not a struct, variant or union type
   |
help: try adding `else` here:
   |
LL |     let Some(b) = foo else {todo!()};
   |                       ++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0574`.
